-- database schema snapshot for E:\AI_RAG
-- target: PostgreSQL 13+
-- scope: tables, constraints, indexes, and check constraints only
-- no CRUD, no stored procedures, no triggers

BEGIN;

CREATE TABLE IF NOT EXISTS product_models (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    model_code VARCHAR(64) NOT NULL,
    model_name VARCHAR(255) NOT NULL,
    product_line VARCHAR(128),
    description TEXT,
    status VARCHAR(16) NOT NULL DEFAULT 'draft',
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_product_models_model_code UNIQUE (model_code),
    CONSTRAINT chk_product_models_status CHECK (status IN ('draft', 'active', 'archived'))
);

CREATE TABLE IF NOT EXISTS product_versions (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    product_model_id BIGINT NOT NULL,
    version_code VARCHAR(64) NOT NULL,
    manual_version VARCHAR(64),
    release_date DATE,
    effective_from TIMESTAMPTZ,
    effective_to TIMESTAMPTZ,
    status VARCHAR(16) NOT NULL DEFAULT 'draft',
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_product_versions_model
        FOREIGN KEY (product_model_id)
        REFERENCES product_models (id)
        ON UPDATE RESTRICT
        ON DELETE RESTRICT,
    CONSTRAINT uq_product_versions_model_version UNIQUE (product_model_id, version_code),
    CONSTRAINT chk_product_versions_status CHECK (status IN ('draft', 'active', 'archived')),
    CONSTRAINT chk_product_versions_effective_range CHECK (
        effective_to IS NULL OR effective_from IS NULL OR effective_from <= effective_to
    )
);

CREATE TABLE IF NOT EXISTS manual_documents (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    doc_id VARCHAR(64) NOT NULL,
    product_model_id BIGINT NOT NULL,
    product_version_id BIGINT NOT NULL,
    title VARCHAR(512) NOT NULL,
    source_file VARCHAR(1024) NOT NULL,
    file_type VARCHAR(16) NOT NULL,
    file_hash VARCHAR(128) NOT NULL,
    language VARCHAR(16) NOT NULL DEFAULT 'zh-CN',
    parse_status VARCHAR(16) NOT NULL DEFAULT 'pending',
    published_at TIMESTAMPTZ,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_manual_documents_model
        FOREIGN KEY (product_model_id)
        REFERENCES product_models (id)
        ON UPDATE RESTRICT
        ON DELETE RESTRICT,
    CONSTRAINT fk_manual_documents_version
        FOREIGN KEY (product_version_id)
        REFERENCES product_versions (id)
        ON UPDATE RESTRICT
        ON DELETE RESTRICT,
    CONSTRAINT uq_manual_documents_doc_id UNIQUE (doc_id),
    CONSTRAINT uq_manual_documents_file_hash UNIQUE (file_hash),
    CONSTRAINT chk_manual_documents_file_type CHECK (lower(file_type) IN ('pdf', 'docx', 'doc', 'xlsx', 'md', 'txt')),
    CONSTRAINT chk_manual_documents_parse_status CHECK (parse_status IN ('pending', 'parsed', 'failed'))
);

CREATE TABLE IF NOT EXISTS manual_sections (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    document_id BIGINT NOT NULL,
    parent_section_id BIGINT,
    section_code VARCHAR(64) NOT NULL,
    section_title VARCHAR(512) NOT NULL,
    section_level INTEGER NOT NULL,
    sort_order INTEGER NOT NULL DEFAULT 0,
    page_start INTEGER NOT NULL,
    page_end INTEGER NOT NULL,
    review_required BOOLEAN NOT NULL DEFAULT FALSE,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_manual_sections_document
        FOREIGN KEY (document_id)
        REFERENCES manual_documents (id)
        ON UPDATE RESTRICT
        ON DELETE CASCADE,
    CONSTRAINT fk_manual_sections_parent
        FOREIGN KEY (parent_section_id)
        REFERENCES manual_sections (id)
        ON UPDATE RESTRICT
        ON DELETE SET NULL,
    CONSTRAINT uq_manual_sections_document_code UNIQUE (document_id, section_code),
    CONSTRAINT chk_manual_sections_level CHECK (section_level >= 1),
    CONSTRAINT chk_manual_sections_sort_order CHECK (sort_order >= 0),
    CONSTRAINT chk_manual_sections_page_range CHECK (page_start >= 1 AND page_end >= page_start)
);

CREATE TABLE IF NOT EXISTS manual_chunks (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    chunk_id VARCHAR(64) NOT NULL,
    document_id BIGINT NOT NULL,
    section_id BIGINT NOT NULL,
    product_model_id BIGINT NOT NULL,
    product_version_id BIGINT NOT NULL,
    section_title VARCHAR(512) NOT NULL,
    page_no INTEGER NOT NULL,
    page_start INTEGER NOT NULL,
    page_end INTEGER NOT NULL,
    content TEXT NOT NULL,
    content_hash VARCHAR(128) NOT NULL,
    token_count INTEGER NOT NULL DEFAULT 0,
    char_count INTEGER NOT NULL DEFAULT 0,
    review_required BOOLEAN NOT NULL DEFAULT FALSE,
    status VARCHAR(16) NOT NULL DEFAULT 'draft',
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_manual_chunks_document
        FOREIGN KEY (document_id)
        REFERENCES manual_documents (id)
        ON UPDATE RESTRICT
        ON DELETE CASCADE,
    CONSTRAINT fk_manual_chunks_section
        FOREIGN KEY (section_id)
        REFERENCES manual_sections (id)
        ON UPDATE RESTRICT
        ON DELETE CASCADE,
    CONSTRAINT fk_manual_chunks_model
        FOREIGN KEY (product_model_id)
        REFERENCES product_models (id)
        ON UPDATE RESTRICT
        ON DELETE RESTRICT,
    CONSTRAINT fk_manual_chunks_version
        FOREIGN KEY (product_version_id)
        REFERENCES product_versions (id)
        ON UPDATE RESTRICT
        ON DELETE RESTRICT,
    CONSTRAINT uq_manual_chunks_chunk_id UNIQUE (chunk_id),
    CONSTRAINT uq_manual_chunks_content_scope UNIQUE (document_id, content_hash),
    CONSTRAINT chk_manual_chunks_range CHECK (page_no >= 1 AND page_start >= 1 AND page_end >= page_start),
    CONSTRAINT chk_manual_chunks_count CHECK (token_count >= 0 AND char_count >= 0),
    CONSTRAINT chk_manual_chunks_status CHECK (status IN ('draft', 'active', 'archived'))
);

CREATE TABLE IF NOT EXISTS chunk_sources (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    chunk_id BIGINT NOT NULL,
    document_id BIGINT NOT NULL,
    section_id BIGINT NOT NULL,
    source_file VARCHAR(1024) NOT NULL,
    source_page_no INTEGER NOT NULL,
    source_section_title VARCHAR(512) NOT NULL,
    source_anchor VARCHAR(255) NOT NULL,
    source_text_hash VARCHAR(128) NOT NULL,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_chunk_sources_chunk
        FOREIGN KEY (chunk_id)
        REFERENCES manual_chunks (id)
        ON UPDATE RESTRICT
        ON DELETE CASCADE,
    CONSTRAINT fk_chunk_sources_document
        FOREIGN KEY (document_id)
        REFERENCES manual_documents (id)
        ON UPDATE RESTRICT
        ON DELETE CASCADE,
    CONSTRAINT fk_chunk_sources_section
        FOREIGN KEY (section_id)
        REFERENCES manual_sections (id)
        ON UPDATE RESTRICT
        ON DELETE CASCADE,
    CONSTRAINT uq_chunk_sources_chunk_source UNIQUE (chunk_id, document_id, source_page_no, source_anchor),
    CONSTRAINT chk_chunk_sources_page_no CHECK (source_page_no >= 1)
);

CREATE TABLE IF NOT EXISTS vector_index_manifests (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    index_name VARCHAR(128) NOT NULL,
    index_version VARCHAR(64) NOT NULL,
    embedding_model VARCHAR(128) NOT NULL,
    embedding_model_version VARCHAR(64) NOT NULL,
    embedding_dimension INTEGER NOT NULL,
    vector_store_type VARCHAR(32) NOT NULL DEFAULT 'pgvector',
    chunk_count INTEGER NOT NULL DEFAULT 0,
    build_status VARCHAR(16) NOT NULL DEFAULT 'planned',
    built_at TIMESTAMPTZ,
    metadata_json JSONB NOT NULL DEFAULT '{}'::jsonb,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_vector_index_name_version UNIQUE (index_name, index_version),
    CONSTRAINT chk_vector_index_dimension CHECK (embedding_dimension > 0),
    CONSTRAINT chk_vector_index_chunk_count CHECK (chunk_count >= 0),
    CONSTRAINT chk_vector_index_store_type CHECK (vector_store_type IN ('pgvector', 'milvus', 'faiss', 'chroma', 'other')),
    CONSTRAINT chk_vector_index_build_status CHECK (build_status IN ('planned', 'building', 'ready', 'failed', 'archived'))
);

CREATE TABLE IF NOT EXISTS chunk_embedding_metadata (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    chunk_id BIGINT NOT NULL,
    vector_index_manifest_id BIGINT NOT NULL,
    embedding_status VARCHAR(16) NOT NULL DEFAULT 'pending',
    embedding_model VARCHAR(128) NOT NULL,
    embedding_dimension INTEGER NOT NULL,
    external_vector_id VARCHAR(128),
    content_hash VARCHAR(128) NOT NULL,
    error_message TEXT,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_chunk_embedding_chunk
        FOREIGN KEY (chunk_id)
        REFERENCES manual_chunks (id)
        ON UPDATE RESTRICT
        ON DELETE CASCADE,
    CONSTRAINT fk_chunk_embedding_manifest
        FOREIGN KEY (vector_index_manifest_id)
        REFERENCES vector_index_manifests (id)
        ON UPDATE RESTRICT
        ON DELETE CASCADE,
    CONSTRAINT uq_chunk_embedding_index_chunk UNIQUE (vector_index_manifest_id, chunk_id),
    CONSTRAINT chk_chunk_embedding_dimension CHECK (embedding_dimension > 0),
    CONSTRAINT chk_chunk_embedding_status CHECK (embedding_status IN ('pending', 'embedded', 'failed', 'skipped'))
);

CREATE TABLE IF NOT EXISTS repair_contacts (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    product_model_id BIGINT,
    region_code VARCHAR(64) NOT NULL,
    region_name VARCHAR(128) NOT NULL,
    contact_type VARCHAR(16) NOT NULL,
    contact_value VARCHAR(512) NOT NULL,
    service_hours VARCHAR(128),
    priority INTEGER NOT NULL DEFAULT 0,
    status VARCHAR(16) NOT NULL DEFAULT 'active',
    effective_from TIMESTAMPTZ,
    effective_to TIMESTAMPTZ,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_repair_contacts_model
        FOREIGN KEY (product_model_id)
        REFERENCES product_models (id)
        ON UPDATE RESTRICT
        ON DELETE SET NULL,
    CONSTRAINT uq_repair_contacts_scope_value UNIQUE (product_model_id, region_code, contact_type, contact_value),
    CONSTRAINT chk_repair_contacts_contact_type CHECK (contact_type IN ('phone', 'email', 'url', 'address')),
    CONSTRAINT chk_repair_contacts_status CHECK (status IN ('active', 'inactive', 'archived')),
    CONSTRAINT chk_repair_contacts_priority CHECK (priority >= 0),
    CONSTRAINT chk_repair_contacts_effective_range CHECK (
        effective_to IS NULL OR effective_from IS NULL OR effective_from <= effective_to
    )
);

CREATE TABLE IF NOT EXISTS golden_questions (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    question_id VARCHAR(64) NOT NULL,
    product_model_id BIGINT,
    product_version_id BIGINT,
    scenario VARCHAR(32) NOT NULL,
    question TEXT NOT NULL,
    expected_answer_summary TEXT,
    expected_chunk_id BIGINT,
    should_refuse BOOLEAN NOT NULL DEFAULT FALSE,
    should_refer_repair BOOLEAN NOT NULL DEFAULT FALSE,
    status VARCHAR(16) NOT NULL DEFAULT 'draft',
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_golden_questions_question_id UNIQUE (question_id),
    CONSTRAINT fk_golden_questions_model
        FOREIGN KEY (product_model_id)
        REFERENCES product_models (id)
        ON UPDATE RESTRICT
        ON DELETE SET NULL,
    CONSTRAINT fk_golden_questions_version
        FOREIGN KEY (product_version_id)
        REFERENCES product_versions (id)
        ON UPDATE RESTRICT
        ON DELETE SET NULL,
    CONSTRAINT fk_golden_questions_chunk
        FOREIGN KEY (expected_chunk_id)
        REFERENCES manual_chunks (id)
        ON UPDATE RESTRICT
        ON DELETE SET NULL,
    CONSTRAINT chk_golden_questions_scenario CHECK (scenario IN ('install', 'operation', 'parameter', 'safety', 'troubleshooting', 'repair')),
    CONSTRAINT chk_golden_questions_status CHECK (status IN ('draft', 'active', 'archived'))
);

CREATE TABLE IF NOT EXISTS database_connection_checks (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    check_id VARCHAR(64) NOT NULL,
    database_type VARCHAR(32) NOT NULL,
    database_version VARCHAR(64),
    check_status VARCHAR(16) NOT NULL,
    checked_tables JSONB NOT NULL DEFAULT '[]'::jsonb,
    sample_data_summary JSONB NOT NULL DEFAULT '{}'::jsonb,
    error_message TEXT,
    checked_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT uq_database_connection_checks_check_id UNIQUE (check_id),
    CONSTRAINT chk_database_connection_checks_status CHECK (check_status IN ('success', 'failed'))
);

CREATE INDEX IF NOT EXISTS idx_product_models_status
    ON product_models (status);

CREATE INDEX IF NOT EXISTS idx_product_models_product_line
    ON product_models (product_line);

CREATE INDEX IF NOT EXISTS idx_product_versions_model_id
    ON product_versions (product_model_id);

CREATE INDEX IF NOT EXISTS idx_product_versions_status
    ON product_versions (status);

CREATE INDEX IF NOT EXISTS idx_product_versions_manual_version
    ON product_versions (manual_version);

CREATE INDEX IF NOT EXISTS idx_manual_documents_model_version
    ON manual_documents (product_model_id, product_version_id);

CREATE INDEX IF NOT EXISTS idx_manual_documents_parse_status
    ON manual_documents (parse_status);

CREATE INDEX IF NOT EXISTS idx_manual_documents_source_file
    ON manual_documents (source_file);

CREATE INDEX IF NOT EXISTS idx_manual_sections_document_id
    ON manual_sections (document_id);

CREATE INDEX IF NOT EXISTS idx_manual_sections_parent_id
    ON manual_sections (parent_section_id);

CREATE INDEX IF NOT EXISTS idx_manual_sections_title
    ON manual_sections (section_title);

CREATE INDEX IF NOT EXISTS idx_manual_sections_page_range
    ON manual_sections (page_start, page_end);

CREATE INDEX IF NOT EXISTS idx_manual_chunks_model_version
    ON manual_chunks (product_model_id, product_version_id);

CREATE INDEX IF NOT EXISTS idx_manual_chunks_section_id
    ON manual_chunks (section_id);

CREATE INDEX IF NOT EXISTS idx_manual_chunks_section_title
    ON manual_chunks (section_title);

CREATE INDEX IF NOT EXISTS idx_manual_chunks_page_no
    ON manual_chunks (page_no);

CREATE INDEX IF NOT EXISTS idx_manual_chunks_content_hash
    ON manual_chunks (content_hash);

CREATE INDEX IF NOT EXISTS idx_manual_chunks_status
    ON manual_chunks (status);

CREATE INDEX IF NOT EXISTS idx_chunk_sources_chunk_id
    ON chunk_sources (chunk_id);

CREATE INDEX IF NOT EXISTS idx_chunk_sources_document_page
    ON chunk_sources (document_id, source_page_no);

CREATE INDEX IF NOT EXISTS idx_chunk_sources_source_file
    ON chunk_sources (source_file);

CREATE INDEX IF NOT EXISTS idx_vector_index_status
    ON vector_index_manifests (build_status);

CREATE INDEX IF NOT EXISTS idx_vector_index_model
    ON vector_index_manifests (embedding_model, embedding_model_version);

CREATE INDEX IF NOT EXISTS idx_chunk_embedding_chunk_id
    ON chunk_embedding_metadata (chunk_id);

CREATE INDEX IF NOT EXISTS idx_chunk_embedding_status
    ON chunk_embedding_metadata (embedding_status);

CREATE INDEX IF NOT EXISTS idx_chunk_embedding_external_vector_id
    ON chunk_embedding_metadata (external_vector_id);

CREATE INDEX IF NOT EXISTS idx_repair_contacts_model_id
    ON repair_contacts (product_model_id);

CREATE INDEX IF NOT EXISTS idx_repair_contacts_region
    ON repair_contacts (region_code);

CREATE INDEX IF NOT EXISTS idx_repair_contacts_status_priority
    ON repair_contacts (status, priority);

CREATE INDEX IF NOT EXISTS idx_golden_questions_model_version
    ON golden_questions (product_model_id, product_version_id);

CREATE INDEX IF NOT EXISTS idx_golden_questions_scenario
    ON golden_questions (scenario);

CREATE INDEX IF NOT EXISTS idx_golden_questions_status
    ON golden_questions (status);

CREATE INDEX IF NOT EXISTS idx_database_connection_checks_status
    ON database_connection_checks (check_status);

CREATE INDEX IF NOT EXISTS idx_database_connection_checks_checked_at
    ON database_connection_checks (checked_at);

COMMIT;
